@@ -14,15 +14,17 @@ namespace LuaRulesParams
 		RULESPARAMLOS_PRIVATE = 1,  //! only readable by the ally (default)
 		RULESPARAMLOS_ALLIED  = 2,  //! readable for ally + ingame allied
 		RULESPARAMLOS_INLOS   = 4,  //! readable if the unit is in LOS
-		RULESPARAMLOS_INRADAR = 8,  //! readable if the unit is in AirLOS
-		RULESPARAMLOS_PUBLIC  = 16, //! readable for all
+		RULESPARAMLOS_TYPED   = 8,  //! readable if the unit is typed (= in radar and was once in LOS)
+		RULESPARAMLOS_INRADAR = 16, //! readable if the unit is in radar
+		RULESPARAMLOS_PUBLIC  = 32, //! readable for all
 
 		//! note: that the following constants include all states beneath it (e.g. PRIVATE_MASK includes PUBLIC,ALLIED,INLOS,...)
-		RULESPARAMLOS_PRIVATE_MASK = 31,
-		RULESPARAMLOS_ALLIED_MASK  = 30,
-		RULESPARAMLOS_INLOS_MASK   = 28,
-		RULESPARAMLOS_INRADAR_MASK = 24,
-		RULESPARAMLOS_PUBLIC_MASK  = 16
+		RULESPARAMLOS_PRIVATE_MASK = 63,
+		RULESPARAMLOS_ALLIED_MASK  = 62,
+		RULESPARAMLOS_INLOS_MASK   = 60,
+		RULESPARAMLOS_TYPED_MASK   = 56,
+		RULESPARAMLOS_INRADAR_MASK = 48,
+		RULESPARAMLOS_PUBLIC_MASK  = 32
 	};
 
 	struct Param {
